--- a/Aura Components/displayAccounts/displayAccounts.cmp
+++ b/Aura Components/displayAccounts/displayAccounts.cmp
@@ -1,4 +1,4 @@
-<aura:component controller="displayAccountsController"  implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId" access="global" >
+<aura:component controller="displayAccountsController"  implements="force:appHostable,flexipage:availableForAllPageTypes" access="global" >
     <aura:attribute name="account" type="List" />
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
     <table class="slds-table slds-table--bordered slds-table--col-bordered slds-table--striped slds-table--cell-buffer slds-table--fixed-layout" style="border:1px #ddd solid;">
